# hasura-mcp

./: README.md  docker-compose.yml  init.sql  pyproject.toml  server.py
